[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
just_sh = "src"
pyjust = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project]
name = "just.sh"
version = "0.0.1"
authors = [
    { name = "Jacob Strieb", email = "jstrieb@alumni.cmu.edu" },
]
description = "Compile Justfiles to portable shell scripts"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    # "Programming Language :: Unix Shell",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [ "just", "justfile", "just.sh", "shell", "compiler", "POSIX", "pyjust" ]
requires-python = ">=3.6"
# May be compatible with older versions
dependencies = [ 
    "parsy >= 2.1",
]

[project.optional-dependencies]
# May be compatible with older versions
test = [
    # Linting
    "black >= 23.12.0",
    "mypy >= 1.6.1",
    "ruff >= 0.1.8",
    # Testing
    "pytest >= 7.4.3",
    "pytest-cov >= 4.1.0",
    "pytest-xdist >= 3.5.0",
]

[project.urls]
Homepage = "https://github.com/jstrieb/just.sh"
Repository = "https://github.com/jstrieb/just.sh.git"
Issues = "https://github.com/jstrieb/just.sh/issues"

[project.scripts]
"just.sh" = "pyjust.convert:cli_entrypoint"
just-sh = "pyjust.convert:cli_entrypoint"
just_sh = "pyjust.convert:cli_entrypoint"
pyjust = "pyjust.convert:cli_entrypoint"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM108", "E501"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "parsy"
ignore_missing_imports = true
